{
    "version": 1,
    "name": "GameInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "145354a0-f69d-42cb-a719-add071f41402",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "2feb9d52-f415-4654-8f10-28284c1acde0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TestShakeExplosion",
                    "type": "Button",
                    "id": "461cc838-f8ac-4252-b796-f38f2c3f65e9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TestShakeSmall",
                    "type": "Button",
                    "id": "15ebabbe-90b4-4c70-ac97-d07d1e3bcbd5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TestShakeMega",
                    "type": "Button",
                    "id": "b997d2cb-29e3-49d8-95f7-fc229318013d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TestZoomIn",
                    "type": "Button",
                    "id": "2228c52e-3e12-4ddc-918a-1a366e8f2f75",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TestZoomOut",
                    "type": "Button",
                    "id": "4ae5a88f-3e56-4025-a0f1-93e633e033f0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ebd080ec-bd15-4492-a1ad-d82f89dcf779",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestShakeSmall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "5e482fac-02b3-4820-a7d0-82f8603b185f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "977af5d5-3809-452b-ab69-f85f346c6cf9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "40901e78-b1f4-4dd3-9caf-d7ee5db9de96",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4be27e79-a51d-416f-b574-b848809ebb79",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d6bdd761-5aa0-41b0-8661-5eea3ddb0227",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "785a063c-4b09-46c4-910f-3c39d92aefde",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestShakeExplosion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb6e89e8-679b-46b9-b8e7-c0cf36721c73",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestZoomIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "370f4dc2-1d0f-435e-aca4-4d1866e5ec9c",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestZoomOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e5d63d8-630c-4a6f-b745-af5ed836dba6",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestShakeMega",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameState",
            "id": "4e383d67-f079-49d1-84cd-9a0498d20ea9",
            "actions": [
                {
                    "name": "TriggerWin",
                    "type": "Button",
                    "id": "3aac0a7a-2033-4772-addb-0c7190a9a9d8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerLose",
                    "type": "Button",
                    "id": "66e96cbc-b826-4779-b205-900d87b5b50e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "760a7e55-1a55-4f7a-93bc-420bf78d49b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1531a445-21e3-47aa-bb2e-b99c0738ad05",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerWin",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6d74980-98af-4446-afba-efb435f4f46a",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerLose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2633d70-9de3-46e2-a400-fac62ca60010",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "04e4a717-b950-4d1c-9ea2-e3869255eb4e",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "72e51b7e-67e3-456c-a0cb-8eb1a81ddc47",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "74976afc-da06-4119-825e-9049787ec103",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Puzzle",
            "id": "0aed2747-df80-48f0-8a4d-65746dc9229b",
            "actions": [
                {
                    "name": "Point",
                    "type": "Value",
                    "id": "ce87f091-3797-4885-a684-141027930885",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "a7b24b9a-5a09-49db-a1a9-abea12a88ab2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "53df871f-4d37-43ed-89ca-270add2f5957",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0acbb549-9d98-40d1-8cbc-9fc0fa54dfbf",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b7d1c02-0c85-439f-b7b3-506636aa84e9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d808ec6f-7a0c-4060-b2ee-68998613ce9e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71b21a56-81be-4a21-8460-81b0c5864a07",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}